--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,16 +5,64 @@
   box-sizing: border-box;
 }
 header {
-  background: url(/assets/img/header.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 300px;
+  background-color: #222;
+  height: 150px;
+  width: 100%;
 }
+
+/* Sessão menu */
+
 header h1 {
+  display: flex;
   text-align: center;
-  font-size: 35px;
+  font-size: 3rem;
   color: #ffff;
-  padding: 30px 0;
+  font-family: "Pacifico", cursive;
+  text-shadow: -2px 5px 5px rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.header-menu {
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2rem 0rem 0rem 15rem; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+/* .menu-nav {
+  display: block;
+  width: 40rem;
+  border-radius: 2rem;
+  padding: 0rem 2rem;
+  text-align: center;
+  margin-right: 12rem;
+} */
+.menu-ul {
+  display: flex;
+  list-style: none;
+  margin-right: 10rem;
+}
+.menu-ul li {
+  padding: 3rem 0rem 0rem 0rem;
+  margin-left: 2.5rem;
+}
+.menu-ul li a {
+  display: block;
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  width: 7rem;
+}
+
+.menu-ul li a:hover {
+  background-color: white;
+  color: #222;
+  border-radius: 5px;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: 1s;
 }
 .container {
   max-width: 1200px;
@@ -184,13 +232,26 @@ header h1 {
 .clock {
   display: flex;
   flex-direction: column;
-  margin: 28px 0 0 20px;
-  background: #222;
-  color: white;
+  color: #222;
+  text-align: left;
+  height: 20vh;
+  align-items: ce;
+  padding-top: 1rem;
+  padding-left: 3rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+h2 {
   text-align: center;
-  padding: 30px 0;
-  height: 30vh;
-  border-radius: 5px;
+  padding-top: 1rem;
+}
+.clock input {
+  display: block;
+  width: 8rem;
+}
+.frm-group {
+  display: flex;
+  flex-direction: column;
 }
 footer {
   background-color: #222;
@@ -294,6 +355,31 @@ footer {
     width: 100%;
   }
   .clock {
+    width: 100%;
+  }
+  .menu-nav {
+    width: 100%;
+  }
+  .clock {
+    width: 100%;
+  }
+  footer {
+    width: 100%;
+  }
+  .footer_content {
+    display: block;
+  }
+  .menu-ul li a {
+    width: 100%;
+  }
+  header {
+    width: 100%;
+  }
+  header h1 {
+    width: 100%;
+    display: none;
+  }
+  .header-menu {
     width: 100%;
   }
 }
